--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Plant Configurator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -11,10 +11,34 @@
     <div id="buttons">
       <svg viewBox="0 0 900 200" id="buttons">
         <rect class="color_btn" width="100" height="100" fill="" />
-        <rect class="color_btn" x="110" width="100" height="100" fill="#a35430" />
-        <rect class="color_btn" x="220" width="100" height="100" fill="#edf1ec" />
-        <rect class="color_btn" x="330" width="100" height="100" fill="#f0a886" />
-        <rect class="color_btn" x="440" width="100" height="100" fill="lightpink" />
+        <rect
+          class="color_btn"
+          x="110"
+          width="100"
+          height="100"
+          fill="#a35430"
+        />
+        <rect
+          class="color_btn"
+          x="220"
+          width="100"
+          height="100"
+          fill="#edf1ec"
+        />
+        <rect
+          class="color_btn"
+          x="330"
+          width="100"
+          height="100"
+          fill="#f0a886"
+        />
+        <rect
+          class="color_btn"
+          x="440"
+          width="100"
+          height="100"
+          fill="lightpink"
+        />
         <rect class="color_btn" x="550" width="100" height="100" fill="blue" />
       </svg>
     </div>
