--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>Plant configurator</header>
     <section></section>
     <div id="buttons">
       <svg viewBox="0 0 900 200" id="buttons">
