--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>Plant configurator</header>
+    <header>PLANT CONFIGURATOR</header>
     <section></section>
     <div id="buttons">
       <svg viewBox="0 0 900 200" id="buttons">
-        <rect class="color_btn" width="100" height="100" fill="" />
-        <rect class="color_btn" x="110" width="100" height="100" fill="#a35430" />
-        <rect class="color_btn" x="220" width="100" height="100" fill="#edf1ec" />
-        <rect class="color_btn" x="330" width="100" height="100" fill="#f0a886" />
-        <rect class="color_btn" x="440" width="100" height="100" fill="lightpink" />
-        <rect class="color_btn" x="550" width="100" height="100" fill="blue" />
+        <rect class="color_btn" x="110" width="100" height="100" fill="#a35430" rx="50" />
+        <rect class="color_btn" x="220" width="100" height="100" fill="#edf1ec" rx="50" />
+        <rect class="color_btn" x="330" width="100" height="100" fill="#f0a886" rx="50" />
+        <rect class="color_btn" x="440" width="100" height="100" fill="lightpink" rx="50" />
+        <rect class="color_btn" x="550" width="100" height="100" fill="blue" rx="50" />
       </svg>
     </div>
     <script src="script.js"></script>
