--- a/index.html
+++ b/index.html
@@ -9,26 +9,33 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="preview">
-      <div id="svgDiv"></div>
-      <img
-        src="assets/pothos.png"
-        alt="Pothos"
-        class="hide"
-        data-feature="pothos"
-      />
-      <img
-        src="assets/cactus.png"
-        alt="Cactus"
-        class="hide"
-        data-feature="cactus"
-      />
-      <img
-        src="assets/lilly.png"
-        alt="Lilly"
-        class="hide"
-        data-feature="lilly"
-      />
+    <div id="configurator">
+      <div id="preview">
+        <div id="svgDiv"></div>
+        <img
+          src="assets/pothos.png"
+          alt="Pothos"
+          class=""
+          data-feature="pothos"
+        />
+        <img
+          src="assets/cactus.png"
+          alt="Cactus"
+          class="hide"
+          data-feature="cactus"
+        />
+        <img
+          src="assets/lilly.png"
+          alt="Lilly"
+          class="hide"
+          data-feature="lilly"
+        />
+      </div>
+      <div id="selected">
+        <ul>
+          <!-- featureElements are added here! -->
+        </ul>
+      </div>
     </div>
     <div id="buttons-container">
       <svg viewBox="0 0 700 150" id="buttons">
