--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1>PALNT CONFIGURATOR</h1>
+      <h1>PLANT CONFIGURATOR</h1>
     </header>
     <main>
       <div id="configurator">
@@ -38,6 +38,7 @@
           <rect class="color_btn" x="550" width="100" height="100" fill="blue" />
         </svg>
         <div id="options">
+          <h2>choose your plant</h2>
           <div id="optionsPlants">
             <figure class="option" data-feature="pothos">
               <img src="assets/pothos-narrow.png" alt="Pothos" />
@@ -52,6 +53,7 @@
               <figcaption>Suculent</figcaption>
             </figure>
           </div>
+          <h2>choose your extras</h2>
           <div id="optionsElse">
             <figure class="option" data-feature="stand">
               <img src="assets/stand-narrow.png" alt="Stand" />
