--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="assets/cactus.png" alt="Cactus" class="hide" data-feature="cactus" />
           <img src="assets/suculent.png" alt="Suculent" class="hide" data-feature="suculent" />
           <img src="assets/rope.png" alt="Rope" class="hide" data-feature="rope" />
-          <img src="assets/stand.png" alt="Stand" class="hide" data-feature="stand" />
+          <img id="stand" src="assets/stand.png" alt="Stand" class="hide" data-feature="stand" />
         </div>
         <div id="selected">
           <ul>
