--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
       <div id="buttons-container">
         <h2>1. Choose the colour</h2>
+        <div id="colour_buttons">
         <svg viewBox="100 0 900 220" id="buttons" width="400" >
           <pattern id="a" patternUnits="userSpaceOnUse" width="50" height="50" patternTransform="scale(1) rotate(0)">
             <rect x="0" y="0" width="100%" height="100%" fill="white" />
@@ -59,6 +60,8 @@
           <rect class="color_btn" x="680" width="100" height="100" fill="url(#a)" rx="50" />
           <rect class="color_btn" x="820" width="100" height="100" fill="url(#b)" rx="50" />
         </svg>
+        <input type="color" id="colorInput" />
+      </div>
         <div id="options">
           <h2>2. Choose your plant</h2>
           <div id="optionsPlants">
