more or less works

--- a/index.html
+++ b/index.html
@@ -16,18 +16,23 @@
         alt="Pothos"
         class="hide"
         data-feature="pothos"
+        data-sort="plants"
+        id="pothos_preview"
       />
       <img
         src="assets/cactus.png"
         alt="Cactus"
         class="hide"
         data-feature="cactus"
+        data-sort="plants"
       />
       <img
         src="assets/lilly.png"
         alt="Lilly"
         class="hide"
         data-feature="lilly"
+        data-sort="plants"
+        id="lilly_preview"
       />
     </div>
     <div id="buttons-container">
@@ -64,15 +69,15 @@
         <rect class="color_btn" x="550" width="100" height="100" fill="blue" />
       </svg>
       <div id="plantsToChoose">
-        <figure class="option" data-feature="pothos">
+        <figure class="option" data-feature="pothos" data-sort="plants">
           <img src="assets/pothos-narrow.png" alt="Pothos" />
           <figcaption>Pothos</figcaption>
         </figure>
-        <figure class="option" data-feature="cactus">
+        <figure class="option" data-feature="cactus" data-sort="plants">
           <img src="assets/cactus-narrow.png" alt="Cactus" />
           <figcaption>Cactus</figcaption>
         </figure>
-        <figure class="option" data-feature="lilly">
+        <figure class="option" data-feature="lilly" data-sort="plants">
           <img src="assets/lilly-narrow.png" alt="Lilly" />
           <figcaption>Lilly</figcaption>
         </figure>
