font and animations

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <div id="configurator">
         <div id="preview">
           <div id="svgDiv"></div>
-          <img src="assets/pothos.png" alt="Pothos" class="hide" data-feature="pothos" />
-          <img src="assets/cactus.png" alt="Cactus" class="hide" data-feature="cactus" />
-          <img src="assets/suculent.png" alt="Suculent" class="hide" data-feature="suculent" />
-          <img src="assets/rope.png" alt="Rope" class="hide" data-feature="rope" />
-          <img id="stand" src="assets/stand.png" alt="Stand" class="hide" data-feature="stand" />
+          <img src="assets/pothos.png" alt="Pothos" class="hide" data-feature="pothos" data-sort="plants"/>
+          <img src="assets/cactus.png" alt="Cactus" class="hide" data-feature="cactus" data-sort="plants" />
+          <img src="assets/suculent.png" alt="Suculent" class="hide" data-feature="suculent" data-sort="plants" />
+          <img src="assets/rope.png" alt="Rope" class="hide" data-feature="rope" data-sort="addOn" />
+          <img id="stand" src="assets/stand.png" alt="Stand" class="hide" data-feature="stand" data-sort="addOn" />
         </div>
         <div id="selected">
           <ul>
@@ -62,26 +62,26 @@
         <div id="options">
           <h2>2. Choose your plant</h2>
           <div id="optionsPlants">
-            <figure class="option" data-feature="pothos">
+            <figure class="option" data-feature="pothos" data-sort="plants">
               <img src="assets/pothos-narrow.png" alt="Pothos" />
               <figcaption>Pothos</figcaption>
             </figure>
-            <figure class="option" data-feature="cactus">
+            <figure class="option" data-feature="cactus" data-sort="plants">
               <img src="assets/cactus-narrow.png" alt="Cactus" />
               <figcaption>Cactus</figcaption>
             </figure>
-            <figure class="option" data-feature="suculent">
+            <figure class="option" data-feature="suculent" data-sort="plants">
               <img src="assets/suculent-narrow.png" alt="Suculent" />
               <figcaption>Suculent</figcaption>
             </figure>
           </div>
           <h2>3. Add some extras</h2>
           <div id="optionsElse">
-            <figure class="option" data-feature="stand">
+            <figure class="option" data-feature="stand" data-sort="addOn">
               <img src="assets/stand-narrow.png" alt="Stand" />
               <figcaption>Stand</figcaption>
             </figure>
-            <figure class="option" data-feature="rope">
+            <figure class="option" data-feature="rope" data-sort="addOn">
               <img src="assets/rope-narrow.png" alt="Rope" />
               <figcaption>Rope</figcaption>
             </figure>
