--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1>CUSTOMISE YOUR PLANT </h1>
+      <h1>Customise your plant </h1>
     </header>
     <main>
       <div id="configurator">
