--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <rect class="color_btn" x="680" width="100" height="100" fill="url(#a)" rx="50" />
           <rect class="color_btn" x="820" width="100" height="100" fill="url(#b)" rx="50" />
         </svg>
-        <input type="color" id="colorInput" />
+       <label> <input type="color" id="colorInput" /></label>
       </div>
         <div id="options">
           <h2>2. Choose your plant</h2>
