--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
           
 
           <rect class="color_btn" x="110" width="100" height="100" fill="#a35430" rx="50" />
-         
-          <rect class="color_btn" x="260" width="100" height="100" fill="#edf1ec" rx="50" />
+          <rect class="color_btn" x="260" width="100" height="100" fill="#canary" rx="50" />
           <rect class="color_btn" x="400" width="100" height="100" fill="#f0a886" rx="50" />
           <rect class="color_btn" x="540" width="100" height="100" fill="lightpink" rx="50" />
           <rect class="color_btn" x="680" width="100" height="100" fill="url(#a)" rx="50" />
           <rect class="color_btn" x="820" width="100" height="100" fill="url(#b)" rx="50" />
         </svg>
+        <span id="input-label">choose your own colour:</span>
        <label> <input type="color" id="colorInput" /></label>
       </div>
         <div id="options">
