--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
           <img src="assets/suculent.png" alt="Suculent" class="hide" data-feature="suculent" data-sort="plants" />
           <img src="assets/rope.png" alt="Rope" class="hide" data-feature="rope" data-sort="addOn" />
           <img id="stand" src="assets/stand.png" alt="Stand" class="hide" data-feature="stand" data-sort="addOn" />
+          <img id="stand" src="assets/basket.png" alt="Basket" class="hide" data-feature="basket" data-sort="addOn" />
+
         </div>
         <div id="selected">
           <ul>
             <!-- featureElements are added here! -->
+            
           </ul>
         </div>
       </div>
@@ -88,6 +91,10 @@
           <figure class="option" data-feature="rope" data-sort="addOn">
             <img src="assets/rope-narrow.png" alt="Rope" />
             <figcaption>Rope</figcaption>
+          </figure>
+          <figure class="option" data-feature="basket" data-sort="addOn">
+            <img src="assets/basket-narrow.png" alt="Basket" />
+            <figcaption>Basket</figcaption>
           </figure>
         </div>
       </div>
