--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </figure>
         </div>
         <h2>3. Add some extras</h2>
-        <div id="optionsElse">
+        <div id="optionsExtras">
           <figure class="option" data-feature="stand" data-sort="addOn">
             <img src="assets/stand-narrow.png" alt="Stand" />
             <figcaption>Stand</figcaption>
