added refresh buttons to addons& plants

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           <img id="stand" src="assets/stand.png" alt="Stand" class="hide" data-feature="stand" data-sort="addOn" />
           <img id="stand" src="assets/basket.png" alt="Basket" class="hide" data-feature="basket" data-sort="addOn" />
 
-        </div>
+        </div>        
+
+
         <div id="selected">
           <ul>
             <!-- featureElements are added here! -->
@@ -81,6 +83,13 @@
             <img src="assets/suculent-narrow.png" alt="Suculent" />
             <figcaption>Suculent</figcaption>
           </figure>
+          <figure class="refresh">
+            <img id="refresh" src="assets/suculent-narrow.png" alt="Suculent" />
+            <figcaption>Refresh</figcaption>
+
+          </figure>
+   
+
         </div>
         <h2>3. Add some extras</h2>
         <div id="optionsExtras">
@@ -95,6 +104,10 @@
           <figure class="option" data-feature="basket" data-sort="addOn">
             <img src="assets/basket-narrow.png" alt="Basket" />
             <figcaption>Basket</figcaption>
+          </figure>
+          <figure class="refreshAddon" >
+            <img id="refreshAddon" src="assets/basket-narrow.png" alt="Basket" />
+            <figcaption>Refresh</figcaption>
           </figure>
         </div>
       </div>
