added colour remove

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     
         <!-- <h2 id="color-input">choose different colour:</h2> -->
         <label> <input type="color" id="colorInput" /></label>
+        <img id="refresh_button" src="refresh.png">
       </div>
       <div id="options">
         <h2>2. Choose your plant</h2>
@@ -84,8 +85,8 @@
             <figcaption>Suculent</figcaption>
           </figure>
           <figure class="refresh">
-            <img id="refresh" src="assets/suculent-narrow.png" alt="Suculent" />
-            <figcaption>Refresh</figcaption>
+            <img id="refresh" src="refresh.png" alt="Refresh" />
+            <!-- <figcaption>Refresh</figcaption> -->
 
           </figure>
    
