adjusting refresh buttons - needs work

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
         <!-- <h2 id="color-input">choose different colour:</h2> -->
         <label> <input type="color" id="colorInput" /></label>
-        <img id="refresh_button" src="refresh.png">
+        <img id="refresh_button" src="refresh-svg.svg">
       </div>
       <div id="options">
         <h2>2. Choose your plant</h2>
@@ -85,7 +85,7 @@
             <figcaption>Suculent</figcaption>
           </figure>
           <figure class="refresh">
-            <img id="refresh" src="refresh.png" alt="Refresh" />
+            <img id="refresh" src="refresh-svg.svg" alt="Refresh" />
             <!-- <figcaption>Refresh</figcaption> -->
 
           </figure>
@@ -107,8 +107,7 @@
             <figcaption>Basket</figcaption>
           </figure>
           <figure class="refreshAddon" >
-            <img id="refreshAddon" src="assets/basket-narrow.png" alt="Basket" />
-            <figcaption>Refresh</figcaption>
+            <img id="refreshAddon" src="refresh-svg.svg" alt="Basket" />
           </figure>
         </div>
       </div>
