fig caption transition

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         <div id="optionsPlants">
           <figure class="option" data-feature="pothos" data-sort="plants">
             <img src="assets/pothos-narrow.png" alt="Pothos" />
-            <figcaption>Pothos</figcaption>
+            <span class="hover_text">
+              <p>Pothos</p></span>
           </figure>
           <figure class="option" data-feature="cactus" data-sort="plants">
             <img src="assets/cactus-narrow.png" alt="Cactus" />
