--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
           </figure>
           <figure class="option" data-feature="cactus" data-sort="plants">
             <img src="assets/cactus-narrow.png" alt="Cactus" />
-            <figcaption>Cactus</figcaption>
+            <span class="hover_text">
+              <p>Cactus</p></span>
           </figure>
           <figure class="option" data-feature="suculent" data-sort="plants">
             <img src="assets/suculent-narrow.png" alt="Suculent" />
-            <figcaption>Suculent</figcaption>
+            <span class="hover_text">
+              <p>Suculent</p></span>
           </figure>
          
 
@@ -102,15 +104,18 @@
         <div id="optionsExtras">
           <figure class="option" data-feature="stand" data-sort="addOn">
             <img src="assets/stand-narrow.png" alt="Stand" />
-            <figcaption>Stand</figcaption>
+            <span class="hover_text_extras">
+              <p>Stand</p></span>
           </figure>
           <figure class="option" data-feature="rope" data-sort="addOn">
             <img src="assets/rope-narrow.png" alt="Rope" />
-            <figcaption>Rope</figcaption>
+            <span class="hover_text_extras">
+              <p>Rope</p></span> 
           </figure>
           <figure class="option" data-feature="basket" data-sort="addOn">
             <img src="assets/basket-narrow.png" alt="Basket" />
-            <figcaption>Basket</figcaption>
+            <span class="hover_text_extras">
+              <p>Basket</p></span>
           </figure>
           
         </div>
